refactored BanCommand and WarnCommand for null safety, improved user mention handling, and adjusted default reasoning logic